Submission changes updated